@@ -87,6 +87,12 @@ void gnc_print_session_moveto(PrintSession * ps, double x, double y);
 void gnc_print_session_text(PrintSession * ps, const char * text);
 void gnc_print_session_done(PrintSession * ps, gboolean);
 
+void gnc_print_session_rotate(PrintSession *ps, double theta_in_degrees);
+void gnc_print_session_translate(PrintSession *ps, double x, double y);
+
+void gnc_print_session_gsave(PrintSession *ps);
+void gnc_print_session_grestore(PrintSession *ps);
+
 void gnc_print_session_preview(PrintSession * ps);
 void gnc_print_session_print(PrintSession * ps);
 void gnc_print_session_render(PrintSession * ps);
